--- a/index.html
+++ b/index.html
@@ -660,8 +660,8 @@
             <img class="who-are-we-pic-2-mob" alt="" src="./public/who-are--we--pic-3-mob@2x.png" />
           </div>
         </div>
-        <div class="btcle-details-mob" id="parent1_m"> 
-          <div class="who-are-we-header-mob">
+        <div class="btcle-details-mob" > 
+          <div class="who-are-we-header-mob" id="parent1_m">
             <div class="who-are-we18">Who Are We ?</div>
             <img class="who-are-we-line-mob" alt="" src="./public/who-are--we--line-mob.svg" />
           </div>
@@ -673,8 +673,8 @@
         </div>
       </div>
       <div class="ipo-policy-section1">
-        <div class="btcle-details-mob" id="parent2_m">
-          <div class="ipo-policy-header-mob">
+        <div class="btcle-details-mob">
+          <div class="ipo-policy-header-mob"  id="parent2_m">
             <div class="ipo-policy3">IPO Policy</div>
             <img class="who-are-we-line-mob" alt="" src="./public/ipo-policy-line-mob.svg" />
           </div>
@@ -704,8 +704,8 @@
           </video>
           <!-- <img class="vedio-1-icon3" alt="" src="./public/vedio-11.svg" /> -->
         </div>
-        <div class="btcle-details-mob3" id="parent3_m">
-          <div class="how-to-buy-bitcoin-limited-hea1">
+        <div class="btcle-details-mob3" >
+          <div class="how-to-buy-bitcoin-limited-hea1" id="parent3_m">
             <div class="ipo-policy3">How to Buy Bitcoin Limited</div>
             <img class="who-are-we-line-mob" alt="" src="./public/how-to-buy-bitcoin-limited-line-mob.svg" />
           </div>
@@ -739,8 +739,8 @@
         <div class="our-vision-container-mob">
           <img class="our-vision-pic-mob" alt="" src="./public/our-vision-pic-mob@2x.png" />
 
-          <div class="our-vision-details-mob" id="parent4_m">
-            <div class="our-vision-header-mob">
+          <div class="our-vision-details-mob" >
+            <div class="our-vision-header-mob" id="parent4_m">
               <div class="ipo-policy3">Our Vision</div>
               <img class="our-vision-line-mob" alt="" src="./public/our-vision-line-mob.svg" />
             </div>
@@ -782,8 +782,8 @@
       <div class="who-are-we-section-mob">
         <img class="our-community-message-pic-mob" alt="" src="./public/our-community-message-pic-mob@2x.png" />
 
-        <div class="our-community-message-details1" id="parent5_m">
-          <div class="who-are-we-header-mob">
+        <div class="our-community-message-details1" >
+          <div class="who-are-we-header-mob" id="parent5_m">
             <div class="ipo-policy3">Our Community Message</div>
             <img class="our-vision-line-mob" alt="" src="./public/our-community-message-line-mob.svg" />
           </div>
