--- a/index.html
+++ b/index.html
@@ -669,7 +669,8 @@
             <img class="who-are-we-pic-2-mob" alt="" src="./public/who-are--we--pic-3-mob@2x.png" />
           </div>
         </div>
-        <div class="btcle-details-mob" id="parent1_m"> 
+        <div id="parent1_m"></div>
+        <div class="btcle-details-mob" > 
           <div class="who-are-we-header-mob">
             <div class="who-are-we18">Who Are We ?</div>
             <img class="who-are-we-line-mob" alt="" src="./public/who-are--we--line-mob.svg" />
@@ -681,8 +682,9 @@
           </div>
         </div>
       </div>
+      <div id="parent2_m"></div>
       <div class="ipo-policy-section1">
-        <div class="btcle-details-mob" id="parent2_m">
+        <div class="btcle-details-mob" >
           <div class="ipo-policy-header-mob">
             <div class="ipo-policy3">IPO Policy</div>
             <img class="who-are-we-line-mob" alt="" src="./public/ipo-policy-line-mob.svg" />
@@ -713,7 +715,8 @@
           </video>
           <!-- <img class="vedio-1-icon3" alt="" src="./public/vedio-11.svg" /> -->
         </div>
-        <div class="btcle-details-mob3" id="parent3_m">
+        <div id="parent3_m"></div>
+        <div class="btcle-details-mob3" >
           <div class="how-to-buy-bitcoin-limited-hea1">
             <div class="ipo-policy3">How to Buy Bitcoin Limited</div>
             <img class="who-are-we-line-mob" alt="" src="./public/how-to-buy-bitcoin-limited-line-mob.svg" />
@@ -747,8 +750,8 @@
       <div class="our-vision-section-mob">
         <div class="our-vision-container-mob">
           <img class="our-vision-pic-mob" alt="" src="./public/our-vision-pic-mob@2x.png" />
-
-          <div class="our-vision-details-mob" id="parent4_m">
+          <div id="parent4_m"></div>
+          <div class="our-vision-details-mob" >
             <div class="our-vision-header-mob">
               <div class="ipo-policy3">Our Vision</div>
               <img class="our-vision-line-mob" alt="" src="./public/our-vision-line-mob.svg" />
@@ -788,10 +791,11 @@
           </div>
         </div>
       </div>
+
       <div class="who-are-we-section-mob">
         <img class="our-community-message-pic-mob" alt="" src="./public/our-community-message-pic-mob@2x.png" />
-
-        <div class="our-community-message-details1" id="parent5_m">
+        <div id="parent5_m"></div>
+        <div class="our-community-message-details1" >
           <div class="who-are-we-header-mob">
             <div class="ipo-policy3">Our Community Message</div>
             <img class="our-vision-line-mob" alt="" src="./public/our-community-message-line-mob.svg" />
@@ -818,8 +822,9 @@
           </div>
         </div>
       </div>
+      <div id="parent6_m"></div>
       <div class="white-pappers-section-mob">
-        <div class="white-pappers-header-mob" id="parent6_m">
+        <div class="white-pappers-header-mob" >
           <div class="ipo-policy3">WHITE PAPPERS</div>
           <img class="our-vision-line-mob" alt="" src="./public/white-pappers-line-mob.svg" />
         </div>
@@ -867,8 +872,9 @@
           </div>
         </div>
       </div>
+      <div id="parent7_m"></div>
       <div class="company-motto-section-mob">
-        <div class="white-pappers-header-mob" id="parent7_m">
+        <div class="white-pappers-header-mob" >
           <div class="ipo-policy3">Company Motto</div>
           <img class="our-vision-line-mob" alt="" src="./public/company-motto-line-mob.svg" />
         </div>
@@ -918,8 +924,9 @@
 
           <!-- <img class="vedio-1-icon3" alt="" src="./public/vedio-11.svg" /> -->
         </div>
+        <div id="parent8_m"></div>
         <div class="btcle-details-mob3">
-          <div class="white-pappers-header-mob" id="parent8_m">
+          <div class="white-pappers-header-mob" >
             <div class="ipo-policy3">Bitcoin Limited Goals</div>
             <img class="our-vision-line-mob" alt="" src="./public/bitcoin-limited-goals-line-mob.svg" />
           </div>
