--- a/index.html
+++ b/index.html
@@ -606,7 +606,7 @@
       <img class="logo-moc-icon" alt="" src="./public/logo-moc@2x.png" />
 
       <div class="header-app-settings-button">
-        <!-- <img class="gear-icon1" alt="" src="./public/gear.svg" /> -->
+        <img class="gear-icon1" alt="" src="./public/gear.svg" />
       </div>
     </div>
     <div class="hero-section-mob-parent">
