--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <div class="hero-section-vedio">
           <!-- <img class="hero-section-vedio-child" alt="" src="./public/rectangle-3@2x.png" /> -->
 
-          <video  id="hero-video_1"  class="hero-section-vedio-child" autoplay muted loop data-video-path="VIDEO11.mp4">
+          <video  id="hero-video_1"  class="hero-section-vedio-child" autoplay muted loop playsinline data-video-path="VIDEO11.mp4">
             <source src="./VIDEO11.mp4"  type="video/mp4">
             Your browser does not support the video tag.
           </video> 
@@ -229,7 +229,7 @@
           <div class="hero-section-vedio">
             <!-- <img class="hero-section-vedio-child" alt="" src="./public/rectangle-3@2x.png" /> -->
            
-            <video  id="hero-video_2"  class="hero-section-vedio-child" autoplay muted loop data-video-path="VIDEO2.mp4">
+            <video  id="hero-video_2"  class="hero-section-vedio-child" autoplay muted loop playsinline  data-video-path="VIDEO2.mp4">
               <source src="VIDEO2.mp4"  type="video/mp4">
               Your browser does not support the video tag.
             </video>
@@ -462,7 +462,7 @@
         <div class="ipo-policy-container" id="parent8">
           <div class="hero-section-vedio">
             <!-- <img class="hero-section-vedio-child" alt="" src="./public/rectangle-3@2x.png" /> -->
-            <video  id="hero-video_3"   class="hero-section-vedio-child" autoplay muted loop data-video-path="VIDEO3.mp4">
+            <video  id="hero-video_3"   class="hero-section-vedio-child" autoplay muted loop playsinline  data-video-path="VIDEO3.mp4">
               <source src="VIDEO3.mp4"  type="video/mp4">
               Your browser does not support the video tag.
             </video>
@@ -652,7 +652,7 @@
         </div>
         <div class="hero-section-video-1-mob">
           <!-- <img class="hero-section-video-1-mob-child" alt="" src="./public/rectangle-3@2x.png" /> -->
-          <video id="hero-video_1_m" class="hero-section-video-1-mob-child_1" autoplay muted loop data-video-path="VIDEO11.mp4">
+          <video id="hero-video_1_m" class="hero-section-video-1-mob-child_1" autoplay muted loop playsinline  data-video-path="VIDEO11.mp4">
             <source src="VIDEO11.mp4" type="video/mp4">
               Your browser does not support the video tag.
           </video>
@@ -709,7 +709,7 @@
       <div class="how-to-buy-bitcoin-limited-sec1">
         <div class="hero-section-video-1-mob">
           <!-- <img class="hero-section-video-1-mob-child" alt="" src="./public/rectangle-3@2x.png" /> -->
-          <video  id="hero-video_2_m"  class="hero-section-video-1-mob-child" autoplay muted loop data-video-path="VIDEO2.mp4">
+          <video  id="hero-video_2_m"  class="hero-section-video-1-mob-child" autoplay muted loop playsinline  data-video-path="VIDEO2.mp4">
             <source src="VIDEO2.mp4"  type="video/mp4">
             Your browser does not support the video tag.
           </video>
@@ -917,7 +917,7 @@
         <div class="hero-section-video-1-mob">
           <!-- <img class="hero-section-video-1-mob-child" alt="" src="./public/rectangle-3@2x.png" /> -->
 
-          <video  id="hero-video_3_m"   class="hero-section-video-1-mob-child" autoplay muted loop data-video-path="VIDEO3.mp4">
+          <video  id="hero-video_3_m"   class="hero-section-video-1-mob-child" autoplay muted loop playsinline  data-video-path="VIDEO3.mp4">
             <source src="VIDEO3.mp4"  type="video/mp4">
             Your browser does not support the video tag.
           </video>
