--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <div class="hero-section-vedio">
           <!-- <img class="hero-section-vedio-child" alt="" src="./public/rectangle-3@2x.png" /> -->
 
-          <video  id="hero-video_1"  class="hero-section-vedio-child" autoplay muted loop playsinline data-video-path="VIDEO11.mp4">
+          <video  id="hero-video_1"  class="hero-section-vedio-child" autoplay="autoplay" controls="controls" controls preload="auto" muted loop playsinline data-video-path="VIDEO11.mp4">
             <source src="./VIDEO11.mp4"  type="video/mp4">
             Your browser does not support the video tag.
           </video> 
@@ -229,7 +229,7 @@
           <div class="hero-section-vedio">
             <!-- <img class="hero-section-vedio-child" alt="" src="./public/rectangle-3@2x.png" /> -->
            
-            <video  id="hero-video_2"  class="hero-section-vedio-child" autoplay muted loop playsinline  data-video-path="VIDEO2.mp4">
+            <video  id="hero-video_2"  class="hero-section-vedio-child" autoplay="autoplay" controls="controls" controls preload="auto" muted loop playsinline  data-video-path="VIDEO2.mp4">
               <source src="VIDEO2.mp4"  type="video/mp4">
               Your browser does not support the video tag.
             </video>
@@ -462,7 +462,7 @@
         <div class="ipo-policy-container" id="parent8">
           <div class="hero-section-vedio">
             <!-- <img class="hero-section-vedio-child" alt="" src="./public/rectangle-3@2x.png" /> -->
-            <video  id="hero-video_3"   class="hero-section-vedio-child" autoplay muted loop playsinline  data-video-path="VIDEO3.mp4">
+            <video  id="hero-video_3"   class="hero-section-vedio-child" autoplay="autoplay" controls="controls" controls preload="auto" muted loop playsinline  data-video-path="VIDEO3.mp4">
               <source src="VIDEO3.mp4"  type="video/mp4">
               Your browser does not support the video tag.
             </video>
@@ -652,7 +652,7 @@
         </div>
         <div class="hero-section-video-1-mob">
           <!-- <img class="hero-section-video-1-mob-child" alt="" src="./public/rectangle-3@2x.png" /> -->
-          <video id="hero-video_1_m" class="hero-section-video-1-mob-child_1" autoplay muted loop playsinline  data-video-path="VIDEO11.mp4">
+          <video id="hero-video_1_m" class="hero-section-video-1-mob-child_1" autoplay="autoplay" controls="controls" controls preload="auto" muted loop playsinline  data-video-path="VIDEO11.mp4">
             <source src="VIDEO11.mp4" type="video/mp4">
               Your browser does not support the video tag.
           </video>
@@ -709,7 +709,7 @@
       <div class="how-to-buy-bitcoin-limited-sec1">
         <div class="hero-section-video-1-mob">
           <!-- <img class="hero-section-video-1-mob-child" alt="" src="./public/rectangle-3@2x.png" /> -->
-          <video  id="hero-video_2_m"  class="hero-section-video-1-mob-child" autoplay muted loop playsinline  data-video-path="VIDEO2.mp4">
+          <video  id="hero-video_2_m"  class="hero-section-video-1-mob-child" autoplay="autoplay" controls="controls" controls preload="auto" muted loop playsinline  data-video-path="VIDEO2.mp4">
             <source src="VIDEO2.mp4"  type="video/mp4">
             Your browser does not support the video tag.
           </video>
@@ -917,7 +917,7 @@
         <div class="hero-section-video-1-mob">
           <!-- <img class="hero-section-video-1-mob-child" alt="" src="./public/rectangle-3@2x.png" /> -->
 
-          <video  id="hero-video_3_m"   class="hero-section-video-1-mob-child" autoplay muted loop playsinline  data-video-path="VIDEO3.mp4">
+          <video  id="hero-video_3_m"   class="hero-section-video-1-mob-child" autoplay="autoplay" controls="controls" controls preload="auto" muted loop playsinline  data-video-path="VIDEO3.mp4">
             <source src="VIDEO3.mp4"  type="video/mp4">
             Your browser does not support the video tag.
           </video>
@@ -1203,22 +1203,14 @@
     });
 </script>
 <script>
-  window.addEventListener('load', function() {
-    playVideo()
-  })
-   function playVideo() {
-        var video1m = document.getElementById('hero-video_1_m');
-        var video2m = document.getElementById('hero-video_2_m');
-        var video3m = document.getElementById('hero-video_3_m');
-        var video1 = document.getElementById('hero-video_1');
-        var video2 = document.getElementById('hero-video_2');
-        var video3 = document.getElementById('hero-video_3');
-        video1.play();
-        video2.play();
-        video3.play();
-        video1m.play();
-        video2m.play();
-        video3m.play();
+  window.onload = function () {
+    alert('56454')
+        document.getElementById('hero-video_1_m').play();
+        document.getElementById('hero-video_2_m').play();
+        document.getElementById('hero-video_3_m').play();
+        document.getElementById('hero-video_1').play();
+        document.getElementById('hero-video_2').play();
+        document.getElementById('hero-video_3').play();
     }
 </script>
 
