--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <div class="hero-section-vedio">
           <!-- <img class="hero-section-vedio-child" alt="" src="./public/rectangle-3@2x.png" /> -->
 
-          <video  id="hero-video_1"  class="hero-section-vedio-child" autoplay="autoplay" controls="controls" controls preload="auto" muted loop playsinline data-video-path="VIDEO11.mp4">
+          <video  id="hero-video_1"  class="hero-section-vedio-child" autoplay="autoplay"  muted loop playsinline data-video-path="VIDEO11.mp4">
             <source src="./VIDEO11.mp4"  type="video/mp4">
             Your browser does not support the video tag.
           </video> 
@@ -229,7 +229,7 @@
           <div class="hero-section-vedio">
             <!-- <img class="hero-section-vedio-child" alt="" src="./public/rectangle-3@2x.png" /> -->
            
-            <video  id="hero-video_2"  class="hero-section-vedio-child" autoplay="autoplay" controls="controls" controls preload="auto" muted loop playsinline  data-video-path="VIDEO2.mp4">
+            <video  id="hero-video_2"  class="hero-section-vedio-child" autoplay="autoplay"  muted loop playsinline  data-video-path="VIDEO2.mp4">
               <source src="VIDEO2.mp4"  type="video/mp4">
               Your browser does not support the video tag.
             </video>
@@ -462,7 +462,7 @@
         <div class="ipo-policy-container" id="parent8">
           <div class="hero-section-vedio">
             <!-- <img class="hero-section-vedio-child" alt="" src="./public/rectangle-3@2x.png" /> -->
-            <video  id="hero-video_3"   class="hero-section-vedio-child" autoplay="autoplay" controls="controls" controls preload="auto" muted loop playsinline  data-video-path="VIDEO3.mp4">
+            <video  id="hero-video_3"   class="hero-section-vedio-child" autoplay="autoplay"  muted loop playsinline  data-video-path="VIDEO3.mp4">
               <source src="VIDEO3.mp4"  type="video/mp4">
               Your browser does not support the video tag.
             </video>
@@ -614,7 +614,7 @@
         <div class="hero-section-mob-details">
           <img class="hero-section-mob-logo" alt="" src="./public/hero-section-mob-logo@2x.png" />
 
-          <div class="btcle-details-mob">
+          <div class="btcle-details-mobN">
             <div class="total-supply-189000-container">
               <span>Name;</span>
               <span class="bitcoin-limited-edition1">
@@ -652,7 +652,7 @@
         </div>
         <div class="hero-section-video-1-mob">
           <!-- <img class="hero-section-video-1-mob-child" alt="" src="./public/rectangle-3@2x.png" /> -->
-          <video id="hero-video_1_m" class="hero-section-video-1-mob-child_1" autoplay="autoplay" controls="controls" controls preload="auto" muted loop playsinline  data-video-path="VIDEO11.mp4">
+          <video id="hero-video_1_m" class="hero-section-video-1-mob-child_1" autoplay="autoplay"  muted loop playsinline  data-video-path="VIDEO11.mp4">
             <source src="VIDEO11.mp4" type="video/mp4">
               Your browser does not support the video tag.
           </video>
@@ -699,9 +699,9 @@
               subscription period to ensure mutual benefit for all.</span>
           </div>
           <a href="http://80.209.225.131:3000/" target="_blank">
-          <div class="button-mob1">
+          <!-- <div class="button-mob1">
             <div class="buy-now">Swap Now</div>
-          </div>
+          </div> -->
         </a>
         </div>
         <img class="ipo-policy-pic-mob" alt="" src="./public/ipo-policy-pic-mob@2x.png" />
@@ -709,7 +709,7 @@
       <div class="how-to-buy-bitcoin-limited-sec1">
         <div class="hero-section-video-1-mob">
           <!-- <img class="hero-section-video-1-mob-child" alt="" src="./public/rectangle-3@2x.png" /> -->
-          <video  id="hero-video_2_m"  class="hero-section-video-1-mob-child" autoplay="autoplay" controls="controls" controls preload="auto" muted loop playsinline  data-video-path="VIDEO2.mp4">
+          <video  id="hero-video_2_m"  class="hero-section-video-1-mob-child" autoplay="autoplay"  muted loop playsinline  data-video-path="VIDEO2.mp4">
             <source src="VIDEO2.mp4"  type="video/mp4">
             Your browser does not support the video tag.
           </video>
@@ -741,9 +741,9 @@
             </p>
           </div>
           <a href="http://80.209.225.131:3000/" target="_blank">
-          <div class="mob">
+          <!-- <div class="mob">
             <div class="buy-now">Buy Now</div>
-          </div>
+          </div> -->
         </a>
         </div>
       </div>
@@ -917,7 +917,7 @@
         <div class="hero-section-video-1-mob">
           <!-- <img class="hero-section-video-1-mob-child" alt="" src="./public/rectangle-3@2x.png" /> -->
 
-          <video  id="hero-video_3_m"   class="hero-section-video-1-mob-child" autoplay="autoplay" controls="controls" controls preload="auto" muted loop playsinline  data-video-path="VIDEO3.mp4">
+          <video  id="hero-video_3_m"   class="hero-section-video-1-mob-child" autoplay="autoplay"  muted loop playsinline  data-video-path="VIDEO3.mp4">
             <source src="VIDEO3.mp4"  type="video/mp4">
             Your browser does not support the video tag.
           </video>
@@ -1204,7 +1204,6 @@
 </script>
 <script>
   window.onload = function () {
-    alert('56454')
         document.getElementById('hero-video_1_m').play();
         document.getElementById('hero-video_2_m').play();
         document.getElementById('hero-video_3_m').play();
